--- a/web-jpa-mvn/src/main/resources/application.properties
+++ b/web-jpa-mvn/src/main/resources/application.properties
@@ -9,7 +9,7 @@ db.url=jdbc:oracle:thin:@panama.states.bls.gov:1521:lausonet
 #db.url=jdbc:postgresql://localhost/datajpa
 #db.username=laus15dev
 db.username=lausacctest
-db.password=Welcome1$
+db.password=xxxxxx
 
 
 #Hibernate Configuration
